--- a/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
+++ b/fun_coding/파이썬_자료구조와_알고리즘(intermediate)/Chapter1_숫자.ipynb
@@ -1213,8 +1213,7 @@
     "\n",
     "def prime_number2(n):\n",
     "    \n",
-    "    for i in range(2, n+1):\n",
-    "        "
+    "    for i in range(2, n+1):"
    ]
   },
   {
