--- a/practice.ipynb
+++ b/practice.ipynb
@@ -2,50 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0b10 2\n",
-      "0b100 4\n",
-      "0b1000 8\n",
-      "0b10000 16\n",
-      "0b100000 32\n",
-      "0b1000000 64\n",
-      "0b10000000 128\n"
-     ]
-    }
-   ],
-   "source": [
-    "num = 1\n",
-    "\n",
-    "for i in range(7):\n",
-    "    print(bin(2 << i), 2 << i)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "num = 14\n",
-    "True if (num % 2 == 0) or (num % 3 == 0) else False"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -63,178 +30,554 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세'"
+       "(1, 2, 3, 4, 5, 6, 7, 8, 9, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "anthem = \"동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세\"\n",
-    "anthem"
+    "nums = []\n",
+    "for i in range(1,11):\n",
+    "    nums.append(i)\n",
+    "tuple(nums)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "52"
+       "55"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(anthem) - anthem.count(\" \")"
+    "sum(nums)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 4, 8, 16]"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "sentence = \"I'm from Korea, but I don't like Kimchi\""
+    "divisor_a = []\n",
+    "divisor_b = []\n",
+    "\n",
+    "for i in range(1, 17):\n",
+    "    if 16 % i == 0:\n",
+    "        divisor_a.append(i)\n",
+    "divisor_a\n",
+    "\n",
+    "for i in range(1, 31):\n",
+    "    if 30 % i == 0:\n",
+    "        divisor_b.append(i)\n",
+    "divisor_a"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 5, 6, 10, 15, 30]"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "divisor_b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2}"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(divisor_a) & set(divisor_b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I'M FROM KOREA, BUT I DON'T LIKE KIMCHI\n",
-      "i'm from korea, but i don't like kimchi\n",
-      "I'M From Korea, But I Don'T Like Kimchi\n"
+      "insert number15 32 44\n"
      ]
     }
    ],
    "source": [
-    "print(sentence.upper())\n",
-    "\n",
-    "print(sentence.lower())\n",
-    "\n",
-    "print(sentence.title())"
+    "num = input(\"insert number\").split(\" \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(num)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'15', '32', '44'}"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = int(input(\"year?\"))\n",
-    "\n",
-    "print(\"년도를 입력하세요 : {}.for\")"
+    "a = [\"alpha\", \"bravo\", \"charlie\", \"delta\", \"echo\", \"foxtrot\", \"golf\", \"hotel\", \"india\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b = []\n",
+    "for i in a:\n",
+    "    if len(i) == 5:\n",
+    "        b.append(i)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['alpha', 'bravo', 'delta', 'hotel', 'india']"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "scores = {\"Wonjeong\":{\"수학\":76, \"과학\":89, \"영어\":93},\n",
+    "         \"Juwon\":{\"수학\":88, \"과학\":87, \"영어\":100},\n",
+    "         \"Seohee\":{\"수학\":86, \"과학\":93, \"영어\":82}}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['Wonjeong', 'Juwon', 'Seohee'])"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores.keys()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "year?2040\n",
-      "년도를 입력하세요 : 2040\n",
-      "2040년 지수의 나이는 43세 입니다.\n"
+      "Wonjeong의 3과목 평균은 86.0입니다.\n",
+      "Juwon의 3과목 평균은 91.66666666666667입니다.\n",
+      "Seohee의 3과목 평균은 87.0입니다.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[86.0, 91.66666666666667, 87.0]"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "year = int(input(\"year?\"))\n",
-    "\n",
-    "print(\"년도를 입력하세요 : {}\".format(year))\n",
-    "print(\"{}년 지수의 나이는 {}세 입니다.\".format(year, (year-2017)+20))"
+    "average = []\n",
+    "for i in scores:\n",
+    "    b = (sum(scores[i].values())/ len(scores[i].keys()))\n",
+    "    print(\"{}의 {}과목 평균은 {}입니다.\".format(i, len(scores.keys()), b))\n",
+    "    average.append(b)\n",
+    "average"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_average = sum(average) / len(average)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88.22222222222223"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_average"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "4 // 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "type somethinghello world\n",
-      "문장을 입력하세요 : hello world\n",
-      "해당 문장의 단어 수는 2개입니다.\n"
+      "insert number26\n",
+      "Z z\n"
      ]
     }
    ],
    "source": [
-    "sentence = input(\"type something\")\n",
-    "print(\"문장을 입력하세요 : {}\".format(sentence))\n",
-    "print(\"해당 문장의 단어 수는 {}개입니다.\".format(len(sentence.split())))"
+    "N = int(input(\"insert number\"))\n",
+    "\n",
+    "if N <= 26:\n",
+    "    print(chr(64+N), chr(96+N))\n",
+    "else:\n",
+    "    print(\"N must be less than equal to 26\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'best'}"
+      ]
+     },
+     "execution_count": 186,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "str1 = \"This is my best\".split(\" \")\n",
+    "str2 = \"Do your best\".split(\" \")\n",
+    "\n",
+    "set1, set2 = set(str1), set(str2)\n",
+    "set1 & set2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert 6 numbers34 15 2 64 194 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = input(\"insert 6 numbers\").replace(\" \", \"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34152641947 11\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num, len(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.0"
+      ]
+     },
+     "execution_count": 202,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(num) // 3.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 203,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hello = []\n",
+    "for i in range(4):\n",
+    "    b = num[3*i:(int(len(num)//3.5))*(1+i)]\n",
+    "    hello.append(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['341', '526', '419', '47']"
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hello"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[341, 526, 419, 47]"
+      ]
+     },
+     "execution_count": 246,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hello2 = []\n",
+    "for i in hello:\n",
+    "    b = int(i)\n",
+    "    hello2.append(b)\n",
+    "hello2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1333"
+      ]
+     },
+     "execution_count": 247,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(hello2)"
    ]
   },
   {
@@ -246,17 +589,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter six numbers :"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enter six numbers :\", end=\"\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "3\n",
+      "6\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, len(str), 3):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34 15 2 64 194 7\n",
+      "1333\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = input().replace(\" \", \"\")\n",
+    "answer = 0\n",
+    "for i in range(0, len(str), 3):\n",
+    "    if (i+3 > len(str)):\n",
+    "        answer += int(str[i : len(str)])\n",
+    "    else:\n",
+    "        answer += int(str[i : i+3])\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "4\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0,10,4):\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "code",
