--- a/problems-review/132-152.ipynb
+++ b/problems-review/132-152.ipynb
@@ -130,35 +130,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert x: 52\n",
+      "insert y: 42\n",
+      "dot is insida square\n"
+     ]
+    }
+   ],
    "source": [
     "#150 한점을 구성하는 좌표 (x, y)를 입력받고 이 점이\n",
     "#(50, 40), (50, 80), (100, 40), (100, 80) 사각형안에 들어있는지 판별하시오\n",
-    "\n"
+    "x = int(input(\"insert x: \"))\n",
+    "y = int(input(\"insert y: \"))\n",
+    "\n",
+    "\n",
+    "if x > 50 and x < 100 and y > 40 and y < 80:\n",
+    "    print(\"dot is insida square\")\n",
+    "else:\n",
+    "    print(\"dot is not insida square\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert sentencebooking.com\n",
+      "not a good sentence\n"
+     ]
+    }
+   ],
+   "source": [
+    "#151 Sentence에서 문자가 aeiou로 시작하면 Good Sentence로 입력하시오.\n",
+    "\n",
+    "Sentence = input(\"insert sentence\")\n",
+    "\n",
+    "if Sentence[0] in \"aeiousAEIOU\":\n",
+    "    print(\"Good sentence\")\n",
+    "else:\n",
+    "    print(\"not a good sentence\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color?pink\n"
+     ]
+    }
+   ],
+   "source": [
+    "#152 colors = [\"red\", \"orange\", \"blue\", \"green\", \"white\", \"black\", \"dark blue\", \"purple\"]\n",
+    "# color를 입력해서, 원소와 중복된다면 Sorry, 없으면 추가하시오\n",
+    "\n",
+    "color = input(\"color?\")\n",
+    "colors = [\"red\", \"orange\", \"blue\", \"green\", \"white\", \"black\", \"dark blue\", \"purple\"]\n",
+    "\n",
+    "if color in colors:\n",
+    "    print(\"Sorry\")\n",
+    "else:\n",
+    "    colors.append(color)"
+   ]
   },
   {
    "cell_type": "code",
