--- a/problems-review/158~170.ipynb
+++ b/problems-review/158~170.ipynb
@@ -218,14 +218,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#170 while활용, 작은수에서 큰수를 입력받아 5의배수를 나타내시오. ex) 7, 34 -> 10,15,20,25,30"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert 1st number7\n",
+      "insert 2nd number34\n",
+      "10\n",
+      "15\n",
+      "20\n",
+      "25\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"insert 1st number\"))\n",
+    "b = int(input(\"insert 2nd number\"))\n",
+    "\n",
+    "if a > b:\n",
+    "    c = a\n",
+    "    a = b\n",
+    "    b = c\n",
+    "    \n",
+    "i = a + 1\n",
+    "\n",
+    "while i < b:\n",
+    "    if i % 5 == 0:\n",
+    "        print(i)\n",
+    "    i += 1\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
