--- a/problems-review/171~184.ipynb
+++ b/problems-review/171~184.ipynb
@@ -61,16 +61,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert prime number4\n",
+      "4 is not a prime number\n"
+     ]
+    }
+   ],
    "source": [
     "#180 입력받은 수가 소수인지 아닌지 알려주는 프로그램\n",
     "\n",
     "num = int(input(\"insert prime number\"))\n",
+    "num_list = []\n",
     "\n",
-    "if num % "
+    "for i in range(1, num+1):\n",
+    "    if num % i == 0:\n",
+    "        num_list.append(i)\n",
+    "        \n",
+    "if len(num_list) == 2:\n",
+    "    print(\"{} is a prime number\".format(num))\n",
+    "else:\n",
+    "    print(\"{} is not a prime number\".format(num))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number13547\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#181 입력받은 각 자리수를 더하는 프로그램. ex) 13547 => 20\n",
+    "\n",
+    "num = input(\"insert number\")\n",
+    "num_sum = 0\n",
+    "\n",
+    "for i in num:\n",
+    "    num_sum += int(i)\n",
+    "num_sum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert integer214\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#182 입력된 문자열이 숫자인지 판별해주는 프로그램. ex) 167o7 => False\n",
+    "\n",
+    "a = int(input(\"insert integer\"))\n",
+    "\n",
+    "if type(a) == int or type(a) == float:\n",
+    "    print(\"True\")\n",
+    "else:\n",
+    "    print(\"False\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
