--- a/problems-review/171~185.ipynb
+++ b/problems-review/171~185.ipynb
@@ -170,6 +170,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 5.01 µs\n",
+      "199\n"
+     ]
+    }
+   ],
+   "source": [
+    "#184 1 + (-2) + 3 + (-4) + ... 와 같은 방식으로 계속 더해갈 때, 총합이 100이상이 되는 마지막 수가 무엇일까요?\n",
+    "\n",
+    "%time\n",
+    "num_sum = 0\n",
+    "\n",
+    "for i in range(0, 1000):\n",
+    "    if i%2 == 0:\n",
+    "        num_sum -= i\n",
+    "    else:\n",
+    "        num_sum += i\n",
+    "    if num_sum == 100:\n",
+    "        print(i)\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number13\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#185 HandsomeQ 수열, n이 짝수 -> n /2\n",
+    "#                    n이 홀수 -> 2n + 2\n",
+    "# ex) n = 13 경우, 13->28->14->7->16->8->4->2->1   길이는 = 9\n",
+    "# 숫자 입력받았을때 길이를 구하는것을 나타내시오\n",
+    "\n",
+    "num = int(input(\"insert number\"))\n",
+    "\n",
+    "num_list = []\n",
+    "while True:\n",
+    "\n",
+    "    if num == 1:\n",
+    "        num_list.append(num)\n",
+    "        print(len(num_list))\n",
+    "        break\n",
+    "\n",
+    "    elif num % 2 == 0:\n",
+    "        num_list.append(num)\n",
+    "        num = num // 2\n",
+    "\n",
+    "    elif num % 2 == 1:\n",
+    "        num_list.append(num)\n",
+    "        num = 2 * num + 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[13, 28, 14, 7, 16, 8, 4, 2, 1]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
