--- a/function (201~219).ipynb
+++ b/function (201~219).ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +122,415 @@
     "def fun(a, b):\n",
     "    c = a + b + mul(a,b)\n",
     "    print(c)\n",
-    "def mx_num(a, b)"
+    "def max_num(a, b):\n",
+    "    if a > b:\n",
+    "        return a\n",
+    "    else:\n",
+    "        return b\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "def starprint(n):\n",
+    "    print(n * \"*\")\n",
+    "\n",
+    "n = int(input(\"Enter the number: \"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*******\n"
+     ]
+    }
+   ],
+   "source": [
+    "starprint(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def operator(a, b):\n",
+    "    return [a + b, a - b, a * b]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 3, 28]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(operator(7,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 1, 7, 3, 6, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_list = [5,1,7,2,6,3]\n",
+    "def swap(i, j):\n",
+    "    temp = num_list[i]\n",
+    "    num_list[i] = num_list[j]\n",
+    "    num_list[j] = temp\n",
+    "    \n",
+    "i, j = 3, 5\n",
+    "swap(i, j)\n",
+    "print(num_list)\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def surf(r):\n",
+    "    a = r ** 2 * 3.14\n",
+    "    print(\"The surface is {}\".format(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The surface is 78.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "surf(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def wordlist(string):\n",
+    "    return string.upper().split(\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the sentence: This is my favorite fruit\n",
+      "['THIS', 'IS', 'MY', 'FAVORITE', 'FRUIT']\n"
+     ]
+    }
+   ],
+   "source": [
+    "string = input(\"Enter the sentence: \")\n",
+    "print(wordlist(string))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fun8의 return값은 13이다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun(n):\n",
+    "    sum_fun = 0\n",
+    "    for i in range(8):\n",
+    "        sum_fun += i % 5\n",
+    "    return sum_fun\n",
+    "n = 8\n",
+    "print(\"fun{}의 return값은 {}이다.\".format(n, fun(n)))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fun(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 5.25 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "#211(1)\n",
+    "# greatest common denominator = gcd\n",
+    "# least common multiple = lcm\n",
+    "%time\n",
+    "def gcd(n, m):\n",
+    "    for i in range(max(n,m), 0, -1):\n",
+    "        if n % i ==0 and m% i ==0:\n",
+    "            return i\n",
+    "\n",
+    "def lcm(n, m):\n",
+    "    \"\"\"Compute the lowest common multiple of n and m\"\"\"\n",
+    "    return n * m / gcd(n, m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3 µs, sys: 1e+03 ns, total: 4 µs\n",
+      "Wall time: 6.91 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "#211(2)\n",
+    "# greatest common denominator = gcd\n",
+    "# least common multiple = lcm\n",
+    "%time\n",
+    "def gcd(n, m):\n",
+    "    for i in range(max(n,m), 0, -1):\n",
+    "        if n % i ==0 and m% i ==0:\n",
+    "            return i\n",
+    "\n",
+    "def lcm(n, m):\n",
+    "    i = max(n, m)\n",
+    "    while True:\n",
+    "        if i % n ==0 and i % m == 0:\n",
+    "            break\n",
+    "        i += 1\n",
+    "    return i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2 µs, sys: 0 ns, total: 2 µs\n",
+      "Wall time: 5.01 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "468"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%time\n",
+    "lcm(52,36)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['74251']"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = \"74251\"\n",
+    "n.join()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'74251'"
+      ]
+     },
+     "execution_count": 106,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "insert number74251\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'str' object has no attribute 'reverse'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-95-6f8a7c55d359>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrev_num\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-95-6f8a7c55d359>\u001b[0m in \u001b[0;36mrev_num\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrev_num\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrev_num\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'reverse'"
+     ]
+    }
+   ],
+   "source": [
+    "n = input(\"insert number\")\n",
+    "\n",
+    "def rev_num(n):\n",
+    "    return n.reverse()\n",
+    "\n",
+    "print(rev_num(n))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74251\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
