--- a/function (201~219).ipynb
+++ b/function (201~219).ipynb
@@ -421,67 +421,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['74251']"
-      ]
-     },
-     "execution_count": 105,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n = \"74251\"\n",
-    "n.join()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 106,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'74251'"
-      ]
-     },
-     "execution_count": 106,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "insert number74251\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'reverse'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-95-6f8a7c55d359>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrev_num\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-95-6f8a7c55d359>\u001b[0m in \u001b[0;36mrev_num\u001b[0;34m(n)\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mrev_num\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreverse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrev_num\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'reverse'"
+      "insert number74251\n",
+      "15247\n"
      ]
     }
    ],
@@ -489,7 +437,7 @@
     "n = input(\"insert number\")\n",
     "\n",
     "def rev_num(n):\n",
-    "    return n.reverse()\n",
+    "    return int(n[::-1])\n",
     "\n",
     "print(rev_num(n))\n"
    ]
@@ -510,6 +458,318 @@
    "source": [
     "print(num)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number : 1234567\n",
+      "+ 7 + 6 + 5 + 4 + 3 + 2 + 1 = 28\n",
+      "+ 8 + 2 = 10\n",
+      "+ 0 + 1 = 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_all(n):\n",
+    "    sum = 0\n",
+    "    while n != 0:\n",
+    "        sum += n % 10\n",
+    "        print(\"+\", n % 10, end= \" \")\n",
+    "        n = (n - (n % 10)) // 10\n",
+    "    print(\"=\", sum)\n",
+    "    return sum\n",
+    "\n",
+    "n = int(input(\"Enter the number : \"))\n",
+    "while n // 10 != 0:\n",
+    "    n = add_all(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2333316668\n"
+     ]
+    }
+   ],
+   "source": [
+    "def ismulThree(n):\n",
+    "    return n % 3 == 0\n",
+    "def ismulFive(n):\n",
+    "    return n % 5 == 0\n",
+    "\n",
+    "sum = 0\n",
+    "\n",
+    "for i in range(1, 100000):\n",
+    "    if ismulFive(i) or ismulThree(i):\n",
+    "        sum += i\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number: 9012345678\n",
+      "num: 901234567\n",
+      "num: 90123456\n",
+      "num: 9012345\n",
+      "num: 901234\n",
+      "num: 90123\n",
+      "num: 9012\n",
+      "num: 901\n",
+      "num: 90\n",
+      "case: 1\n",
+      "num: 9\n",
+      "num: 0\n",
+      "num: 901234567\n",
+      "num: 90123456\n",
+      "num: 9012345\n",
+      "num: 901234\n",
+      "num: 90123\n",
+      "num: 9012\n",
+      "num: 901\n",
+      "case: 1\n",
+      "num: 90\n",
+      "num: 9\n",
+      "num: 0\n",
+      "num: 901234567\n",
+      "num: 90123456\n",
+      "num: 9012345\n",
+      "num: 901234\n",
+      "num: 90123\n",
+      "num: 9012\n",
+      "case: 1\n",
+      "num: 901\n",
+      "num: 90\n",
+      "num: 9\n",
+      "num: 0\n",
+      "num: 901234567\n",
+      "num: 90123456\n",
+      "num: 9012345\n",
+      "num: 901234\n",
+      "num: 90123\n",
+      "case: 1\n",
+      "num: 9012\n",
+      "num: 901\n",
+      "num: 90\n",
+      "num: 9\n",
+      "num: 0\n",
+      "num: 901234567\n",
+      "num: 90123456\n",
+      "num: 9012345\n",
+      "num: 901234\n",
+      "case: 1\n",
+      "num: 90123\n",
+      "num: 9012\n",
+      "num: 901\n",
+      "num: 90\n",
+      "num: 9\n",
+      "num: 0\n",
+      "num: 901234567\n",
+      "num: 90123456\n",
+      "num: 9012345\n",
+      "case: 1\n",
+      "num: 901234\n",
+      "num: 90123\n",
+      "num: 9012\n",
+      "num: 901\n",
+      "num: 90\n",
+      "num: 9\n",
+      "num: 0\n",
+      "num: 901234567\n",
+      "num: 90123456\n",
+      "case: 1\n",
+      "num: 9012345\n",
+      "num: 901234\n",
+      "num: 90123\n",
+      "num: 9012\n",
+      "num: 901\n",
+      "num: 90\n",
+      "num: 9\n",
+      "num: 0\n",
+      "num: 901234567\n",
+      "case: 1\n",
+      "num: 90123456\n",
+      "num: 9012345\n",
+      "num: 901234\n",
+      "num: 90123\n",
+      "num: 9012\n",
+      "num: 901\n",
+      "num: 90\n",
+      "num: 9\n",
+      "num: 0\n",
+      "case: 1\n",
+      "num: 901234567\n",
+      "num: 90123456\n",
+      "num: 9012345\n",
+      "num: 901234\n",
+      "num: 90123\n",
+      "num: 9012\n",
+      "num: 901\n",
+      "num: 90\n",
+      "num: 9\n",
+      "num: 0\n",
+      "num: 901234567\n",
+      "num: 90123456\n",
+      "num: 9012345\n",
+      "num: 901234\n",
+      "num: 90123\n",
+      "num: 9012\n",
+      "num: 901\n",
+      "num: 90\n",
+      "num: 9\n",
+      "case: 1\n",
+      "num: 0\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def allnum(n):\n",
+    "    for i in range(0, 10):\n",
+    "        case = 0\n",
+    "        num = n\n",
+    "        while num != 0:\n",
+    "            if num % 10 == i:\n",
+    "                case += 1\n",
+    "                print(\"case:\", case)\n",
+    "            num = num //10\n",
+    "            print(\"num:\", num)\n",
+    "        if case != 1:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "n = int(input(\"Enter the number: \"))\n",
+    "print(allnum(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 161,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1256 % 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "123456780"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1234567809 // 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number : 13\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "def num_1(n):\n",
+    "    case = 0\n",
+    "    for i in range(1, n+1):\n",
+    "        num = i\n",
+    "        while num != 0:\n",
+    "            if num % 10 == 1:\n",
+    "                case += 1\n",
+    "            num = num // 10\n",
+    "    return case\n",
+    "\n",
+    "n = int(input(\"Enter the number : \"))\n",
+    "print(num_1(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
