--- a/function (201~219).ipynb
+++ b/function (201~219).ipynb
@@ -527,7 +527,9 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -745,10 +747,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#217\n",
+    "def inf_d(n):\n",
+    "    case = int(n)\n",
+    "    for i in range(len(n)):\n",
+    "        case += int(n[i])\n",
+    "    print(case)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "inf_d(\"1\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the number : 4007\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#217\n",
+    "def d(n):\n",
+    "    num = n\n",
+    "    while n != 0:\n",
+    "        num += n % 10\n",
+    "        n = n //10\n",
+    "    return num\n",
+    "\n",
+    "def isSelfnum(n):\n",
+    "    boolean = True\n",
+    "    for i in range(1, n):\n",
+    "        if n == d(i):\n",
+    "            boolean = False\n",
+    "    return boolean\n",
+    "    \n",
+    "n = int(input(\"Enter the number : \"))\n",
+    "print(isSelfnum(n))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 306,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "22 % 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun_Double(N):\n",
+    "    max = 1\n",
+    "    while max ** 2 <= N:\n",
+    "        max += 1\n",
+    "    for i in range(max):\n",
+    "        for j in range(max):\n",
+    "            for k in range(max):\n",
+    "                if(i**2 + j**2 + k**2 == N):\n",
+    "                    a = [i,j,k]\n",
+    "                    while 0 in a:\n",
+    "                        a.remove(0)\n",
+    "                    return a\n",
+    "    print(\"Sorry\")\n",
+    "\n",
+    "print(fun_Double(14))\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fun_recurring(N):\n",
+    "    nstr = str(1/N)[2:]\n",
+    "    if len(nstr) <= 10:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        rec = \"\"\n",
+    "        for i in nstr:\n",
+    "            rec += i\n",
+    "            if rec == nstr[len(rec) : 2*len(rec)]:\n",
+    "                return rec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fun_recurring(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.058823529411764705"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1/17"
+   ]
   },
   {
    "cell_type": "code",
@@ -772,25 +942,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### "
+   ]
   }
  ],
  "metadata": {
